Feat: Tripas a moda do porto recipe added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/francesinha.html">Francesinha</a></li>
+            <li><a href="./recipes/tripas-a-moda-do-porto.html">Tripas A Moda Do Porto</a></li>
         </ul>
     </body>
 </html>
