--- a/recipes/francesinha.html
+++ b/recipes/francesinha.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Francesinha</h1>
-        <img src="../assets/img/francesinha.jpg" alt="francesinha">
+        <img src="../assets/img/francesinha.jpg" alt="francesinha" width="300" height="200">
         <h2>Description</h2>
         <p>The francesinha, in its special sandwich variation, is most commonly made up of sausage, fresh sausage, ham, cold cuts, and beef steak, covered with melted cheese.</p>
         <h3>Ingredients</h3>
