Feat: Bacalhau à brás recipe added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <h3>Portugal Culinary</h2>
+        <img src="./assets/img/chef.jpg" alt="chef" width="400" height="300">
+        <p>Get to know a few dishes from the portuguese kitchen!</p>
         <ul>
             <li><a href="./recipes/francesinha.html">Francesinha</a></li>
             <li><a href="./recipes/tripas-a-moda-do-porto.html">Tripas A Moda Do Porto</a></li>
+            <li><a href="./recipes/bacalhau-a-bras.html">Bacalhau à brás</a></li>
         </ul>
     </body>
 </html>
